--- a/style.css
+++ b/style.css
@@ -49,10 +49,45 @@ a{
     align-items: center;
     justify-content: center;
 }
+.information{
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+#information-title{
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 900;
+}
+.images{
+    display: flex;
+    gap: 30px;
+}
+.info{
+    width: 100px;
+    text-align: center;
+}
+.info-images{
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    border: solid #3882f6 2px;
+}
+.info p{
+    color: rgb(110, 116, 124);
+    font-size: 12px;
+}
+
+
+
 
 .quote{
     height: 300px;
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
 }
 
 .footer{
