--- a/style.css
+++ b/style.css
@@ -81,13 +81,29 @@ a{
 }
 
 
-
-
 .quote{
+    padding: 100px;
     height: 300px;
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.quote-text{
+    width: 600px;
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    font-weight: 0;
+}
+.speaker{
+    width: 360px;
+    align-self: flex-end;
+    font-size: 26px;
+    font-weight: 900;
+    color: #1f2937;
 }
 
 .footer{
@@ -120,4 +136,5 @@ button{
     width: 70px;
     height: 20px;
     font-size: 12px;
+    cursor: pointer;
 }
