--- a/style.css
+++ b/style.css
@@ -53,11 +53,12 @@ a{
 
 
 .information{
-    height: 500px;
+    padding-top: 50px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 150px;
+    gap: 50px;
 }
 #information-title{
     color: #1f2937;
